--- a/web/base.css
+++ b/web/base.css
@@ -268,6 +268,7 @@ body > main {
 .card a {
   color: var(--colour-text);
   font-weight: 600;
+  text-decoration: underline var(--colour-accent);
 }
 
 .card-title-wrapper {
