project members circle icons

--- a/web/project/style.css
+++ b/web/project/style.css
@@ -83,6 +83,13 @@
   margin: 1rem 1rem; /* top right bottom left */
 }
 
+.project-members-wrap a {
+  text-align: center;
+}
+.project-members-wrap img {
+  border-radius: 50%;
+}
+
 /* CIRCULAR PROGRESS BAR */
 
 /* PROGRESS SPINNER */
