--- a/web/dashboard/style.css
+++ b/web/dashboard/style.css
@@ -19,8 +19,5 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-}
-#project-wrapper .client img {
-  border-radius: 50%;
-  margin-right: 1rem;
+  gap: 1rem;
 }
