--- a/web/base.css
+++ b/web/base.css
@@ -137,7 +137,7 @@ body > main {
   text-align: center;
 }
 
-.side-menu li a {
+.side-menu li > * {
   color: var(--colour-text);
   text-decoration: none;
   display: flex;
@@ -678,9 +678,16 @@ a.btn-action {
   display: none;
 }
 
+.mobile-only {
+  display: initial;
+}
+
 @media (min-width: 768px) {
   .mobile-hidden {
     display: initial;
+  }
+  .mobile-only {
+    display: none !important;
   }
 }
 
