--- a/web/base.css
+++ b/web/base.css
@@ -544,6 +544,22 @@ input[type="checkbox"]:checked + label {
   display: inline-flex;
 }
 
+.progress-bar {
+  width: 100%;
+  height: 0.8rem;
+  background-color: var(--colour-mid-grey);
+}
+
+.progress-bar-fill {
+  height: 100%;
+  background-color: var(--bar-fill, var(--colour-accent));
+}
+
+.kanban-section .progress-bar {
+  width: 90%;
+  margin: auto;
+}
+
 /* BUTTONS */
 
 .btn-action {
