--- a/web/base.css
+++ b/web/base.css
@@ -545,12 +545,14 @@ input[type="checkbox"]:checked + label {
 }
 
 .progress-bar {
+  border-radius: 1rem;
   width: 100%;
   height: 0.8rem;
   background-color: var(--colour-mid-grey);
 }
 
 .progress-bar-fill {
+  border-radius: 1rem;
   height: 100%;
   background-color: var(--bar-fill, var(--colour-accent));
 }
