--- a/web/base.css
+++ b/web/base.css
@@ -788,7 +788,7 @@ a.btn-action {
 
 #dialog-multitask .subtask-list {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   flex-wrap: nowrap;
   align-content: center;
   justify-content: flex-start;
